--- a/src/Styles/Modal.css
+++ b/src/Styles/Modal.css
@@ -22,6 +22,7 @@
     transform: translate(-50%,-50%);
     background-color: rgb(22, 22, 71);
     padding:10px;
+    color: rgb(130, 10, 10);
   
  
 }
